# Quantum-DNR-Benchmark

./: .gitignore  README.md  pyproject.toml  res_analysis.ipynb
benchmark_scripts/: QPU_benchmark.py  analytical_methods_benchmark.py  benchmark_analytical.py  benchmark_qpu.py  benchmark_simulation.py  finding_warm_start_parameters.ipynb  full_benchmark.py  seeds.jsonl  sim_time.json
data/: 12_bus.csv
results/: 15_bus.csv  9_bus.csv  analytical_runs.jsonl  analytical_runs_20260605_041755.jsonl  analytical_runs_20260611_075716.jsonl  benchmark_runs.jsonl  benchmark_runs_20260604_080337.jsonl  benchmark_runs_20260611_002518.jsonl  fig3c_NN2_AOA_native_d8lu4or2d42s73cbu5ag.qasm  finding_warm_start_parameters.ipynb  qpu_runs.jsonl  qpu_runs_20260605_084319.jsonl  qpu_runs_20260605_090501.jsonl  qpu_runs_20260605_092905.jsonl  qpu_runs_20260606_041350.jsonl  qpu_runs_20260606_052933.jsonl  qpu_runs_20260606_054409.jsonl  qpu_runs_20260606_072443.jsonl  qpu_runs_20260606_085552.jsonl  qpu_runs_20260612_082738_FAKE.jsonl  qpu_runs_20260612_091143_FAKE.jsonl  qpu_runs_20260612_101918.jsonl  qpu_runs_20260613_081927.jsonl  results_analysis.jsonl  results_analysis_analytical.jsonl  results_analysis_qpu.jsonl  table_benchmark.tex
